Digital/objects/Placement_Layout__c.object
<CustomObject>
    <label>Placement Layout</label>
    <nameField>
        <label>Placement Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brands__c</fullName>
        <inlineHelpText>Select the brand from the drop down: E.g. VS, PINK, Beauty, Marketplace</inlineHelpText>
        <label>Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Brands</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Page_Name__c</fullName>
        <label>Editorial Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collection_Page_Url__c</fullName>
        <inlineHelpText>Add collection page URLs for collection Header and collection cue placements.  Enter URL without live site details. For e.g. enter “/vs/newarrivals/shop-collection” without “https://victoriassecret.com/”</inlineHelpText>
        <label>Collection Page Url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compared_Placement_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compared Placement Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Placement Layout</relationshipLabel>
        <relationshipName>Placement_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Formula__c</fullName>
        <formula>Floorset_Plan__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floorset_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Floorset Plan</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Brands__c</field>
                <operation>equals</operation>
                <valueField>DGTL_Floorset_Plan__c.Brands__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DGTL_Floorset_Plan__c</referenceTo>
        <relationshipLabel>Placement Layout</relationshipLabel>
        <relationshipName>Placement_Layout</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Types__c</fullName>
        <inlineHelpText>Select appropriate Home, Landing, Editorials or LTO page type from the drop down, based on what is being built</inlineHelpText>
        <label>Page Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brands__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>DGTL_Page_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Placement_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Placement Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Placement Layout (Parent Placement Layout)</relationshipLabel>
        <relationshipName>Placement_Layout1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>This Field is to specify the date to get snapshots for different days.</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <label>Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_No__c</fullName>
        <formula>Floorset_Plan__r.Time_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Snapshot</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brands__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Snapshot_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Escalation_Content</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Escalation Content</label>
    </listViews>
</CustomObject>